feat: sizing / responsive

--- a/style.css
+++ b/style.css
@@ -13,3 +13,19 @@
 .font-weight-bold {
     font-weight:bold;
 }
+
+.card-text {
+    height:150px;
+    overflow:auto;
+}
+
+.card-footer {
+    min-height:77px;
+}
+
+@media(max-width:768px) {
+    .card-text {
+        height:60vh;
+        overflow:auto;
+    }
+}
